@@ -1,5 +1,10 @@
 # Graphes-of-Adelbert
 Incomplete. JRuby embedded in java, made in Eclipse 2020-09.
 Ressources used : JavaFx, https://www.youtube.com/watch?v=eVH-Q85hqe0&ab_channel=cogmission, JRuby, JFoenix, fontawesomefx, Richtextfx
+Run configuration, VM arguments :
+--module-path C:\Users\youruser\javafx-sdk-11.0.2\lib
+--add-modules=ALL-MODULE-PATH
+--add-opens javafx.graphics/javafx.css=ALL-UNNAMED
 ![alt text](https://cdn.discordapp.com/attachments/404481664144769036/942850429413388298/unknown.png)
 ![alt text](https://cdn.discordapp.com/attachments/404481664144769036/942850633755660308/unknown.png)
+
